IntelliJ Inspect Code